--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "babel-jest": "^29.7.0",
         "babel-loader": "^9.1.3",
         "css-loader": "^6.8.1",
-        "cypress": "^13.13.3",
+        "cypress": "^13.15.0",
         "dotenv-webpack": "^8.0.1",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -93,16 +93,16 @@
         "prettier-eslint-cli": "^8.0.1",
         "react-test-renderer": "^18.2.0",
         "redux-mock-store": "^1.5.4",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
         "storybook": "^7.6.10",
         "storybook-addon-react-router-v6": "^2.0.10",
         "style-loader": "^3.3.3",
         "ts-jest": "^29.2.4",
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
-        "url-loader": "^4.1.1",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.62.1",
-        "sass-loader": "^13.2.2"
+        "url-loader": "^4.1.1"
     },
     "scripts": {
         "start": "webpack serve --mode=development",
